<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="empty"></string>
    <string name="app_name">Health Toolbox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_personalize_me">Personalize Me!</string>
    <string name="action_er_Contacts">ER Contacts</string>
    <string name="action_fun_facts">Fun Facts</string>
    <string name="action_settings">Settings</string>
    <string name="action_calorie">Calories Counter</string>
    <string name="title_activity_info_display">InfoDisplay</string>
    <string name="title_activity_seperated_list_adapter">SeperatedListAdapter</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_title">Login</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_register">Register</string>
    <string name="action_faq">FAQ</string>
    <string name="title_activity_did_you_know">DidYouKnow</string>
    <string name="wiki_register">Healthy Tips Notification</string>
    <string name="prefs">MyPrefs</string>
    <string name="wiki_pref">WikiPref</string>
    <string name="title_activity_first_responder">FirstResponder</string>
    <string name="title_activity_calorie_counter">Calories Counter</string>
    <string name="calorie_title">Input your activities of the day:</string>
    <string name="calorie_total">Your total calories burned:</string>
    <string name="calorie_add">Add Activity</string>
    <string name="title_activity_faq">FAQ Activity</string>
    <string name="title_activity_personalize_me">Personalize Me</string>
    <string name="req1">You need to give emergency contact numbers in order to use the PANICK MODE.</string>
    <string name="req2">Partial and/or full Personal data has been entered, you can still change it or change your emergency contact info.</string>
    <string name="req3">No personal data has been entered, you can still enter it and/or change your emergency contact info.</string>
    <string name="SmsMessage">Emergency! My life could be at risk and I believe I require medical care. Hopefully my location will reach you soon.\n - sent from The Health Toolbox</string>

</resources>
