<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"

    android:orientation="vertical"
    tools:context="scs.resistors.firstresponder.CalorieCounterActivity">

    <TextView
        android:layout_width="357dp"
        android:layout_height="42dp"
        android:text="@string/calorie_title"
        android:id="@+id/textViewCalorieTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="51dp">

        <Spinner
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCalorieActivities"
            android:layout_weight="0.87" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <EditText
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextCalorieTime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="minutes"
            android:id="@+id/textView2"
            android:layout_weight="0.76" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calorie_add"
            android:id="@+id/buttonCalorieSubmit"
            android:layout_gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/calorie_total"
            android:id="@+id/textViewCalorieTotalTitle"
            android:layout_weight="0.70" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/textViewCalorieTotal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewCalorieActivities" />
    </LinearLayout>

</LinearLayout>
